[package]
name = "tencentcloud-hunyuan-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Yzion Open-Source <open-source@y-zion.com>"]
description = "TencentCloud Hunyuan SDK for Rust"
repository = "https://github.com/y-zion/tencentcloud-hunyuan-sdk-rust"
homepage = "https://github.com/y-zion/tencentcloud-hunyuan-sdk-rust"
documentation = "https://docs.rs/tencentcloud-hunyuan-sdk"
readme = "README.md"
keywords = ["tencentcloud", "hunyuan", "sdk", "ai", "llm"]
categories = ["api-bindings"]
license-file = "LICENSE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
percent-encoding = "2"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
anyhow = "1"
